data/derived/comb/progs/unify/prog3240.ml.out
Characters 96-98:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('b -> 'b) list
